modules/web/js/tests/resources/parser/invalidSyntax/MainFuncWithoutParams.bal
package samples.parser.invalidSyntax;

// Following line is invalid.
function main {
	int b;
	reply m;
}
